# transparenz-reports

./: .gitignore  CNAME  CONTRIBUTING.md  Pipfile  README.md  import_hetzner_invoices.sh  index.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.run/: Flask (src_app.py).run.xml  Freeze.run.xml
betriebskosten/: index.html
betriebskosten/data/: hcloud.json  total.json
data/: projects.yml
data/events/2019/: hackumenta.yml
data/running_expenses/hcloud/: 2018-08-05.csv  2018-09-05.csv  2018-10-05.csv  2018-11-05.csv  2018-12-05.csv  2019-01-05.csv  2019-02-05.csv  2019-03-05.csv  2019-04-05.csv  2019-05-05.csv  2019-06-05.csv  2019-07-05.csv  2019-08-05.csv  2019-09-05.csv  2019-10-05.csv  2019-11-05.csv  2019-12-05.csv  2020-01-05.csv  2020-02-05.csv  2020-03-05.csv  2020-04-05.csv  2020-05-05.csv  2020-06-05.csv  2020-07-05.csv  2020-08-05.csv  2020-09-05.csv  2020-10-05.csv  2020-11-05.csv  2020-12-05.csv  2021-01-05.csv  2021-02-05.csv  2021-03-05.csv  2021-04-05.csv  2021-05-05.csv  2021-06-05.csv  2021-07-05.csv  2021-08-05.csv  2021-09-05.csv  2021-10-05.csv  2021-11-05.csv  (+29 more)
events/: index.html
events/2019/hackumenta/: index.html
projekte/: index.html
src/: app.py  freeze.py
src/sections/: events.py  projects.py  running_expenses.py
src/sections/templates/events/: detail.html  index.html
src/sections/templates/projects/: index.html
src/sections/templates/running_expenses/: index.html
src/static/css/: global.css
src/static/js/: expenses_graph.js
src/templates/: about.html  base.html  favicons.html  footer.html  header.html  index.html
static/js/: expenses_graph.js
tests/: test_app.py  test_fizzbuzz.py
