[tool.poetry]
name = "transparenz-reports"
version = "0.1.0"
description = ""
authors = ["Soeren Wegener <soerface@flipdot.org>"]

[tool.poetry.dependencies]
python = "^3.8"
Frozen-Flask = "^0.18"
pandas = "^1.4.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
nose2 = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
